Add carousel text shadow and fix update time and user

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -92,7 +92,11 @@ section {
 #home-carousel .carousel-inner .carousel-item .carousel-image {
   height: 40vh;
   -webkit-filter: brightness(50%);
-          filter: brightness(50%);
+  filter: brightness(50%);
+}
+
+#home-carousel .carousel-inner .carousel-item .carousel-caption {
+  text-shadow: #000 0 0 25px;
 }
 
 .foot-margin {
