--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -39,6 +39,7 @@ section{
 
 .page-header{
     color: $white;
+    text-shadow: #000 0 0 10px, #000 0 0 10px;
 }
 
 .page-header-admin{
@@ -91,7 +92,7 @@ section{
                 filter: brightness(50%);
             }
             .carousel-caption{
-                text-shadow: #000 0 0 25px;
+                text-shadow: #000 0 0 10px, #000 0 0 10px;
             }
         }
     }
