--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -103,6 +103,8 @@ section{
 }
 
 .connectedSortable{
+    min-height: 100px;
+    width: 100%;
     li{
         font-family: $head-font;
         color:$white;
