--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -102,7 +102,7 @@ section{
     }
 }
 
-.connectedSortable{
+.sortable_connected{
     min-height: 100px;
     width: 100%;
     li{
@@ -113,7 +113,7 @@ section{
     }
 }
 
-.foot-margin{
+.vertical-margin{
     width: 100%;
     height: 50px;
 }
