--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -3,6 +3,10 @@
 
 $body-bg: #333;
 $white: #fff;
+$light-grey: #ccc;
+$grey: #999;
+$dark-grey: #222;
+$dark: #111;
 $primary: #fff;
 $secondary: #dc3545;
 $padding: 10px;
@@ -68,8 +72,23 @@ section{
 
 .content{
     .container{
-        color: $white !important;
+        color: $white;
     }
+}
+
+.page-content-list{
+    width: 100%;
+    height:auto;
+    margin: 0 0 2*$padding 0;
+    color: $white;
+    .image{
+        height:250px;
+    }
+    .description{
+        background: linear-gradient($dark, $dark-grey 20%, $dark 40%);
+    }
+}.page-content-list:last-child{
+    margin: 0 0 0 0;
 }
 
 .content-admin{
