--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,10 @@
   font-family: "Ubuntu", sans-serif;
 }
 
+.btn {
+  font-family: "Russo One", sans-serif;
+}
+
 nav {
   font-family: "Russo One", sans-serif;
 }
