--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,22 @@ nav .dropdown-menu i {
   width: 20px;
 }
 
+.avatar-24 {
+  height: 24px;
+  width: 24px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  float: left;
+}
+
+.avatar-15 {
+  height: 15px;
+  width: 15px;
+  border-radius: 5px;
+  float: left;
+  margin: 5px;
+}
+
 .nav-margin {
   width: 100%;
   height: 55px;
