--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -32,6 +32,21 @@ nav{
     }
 }
 
+.avatar-24{
+    height: 24px;
+    width: 24px;
+    border: 1px solid $white;
+    border-radius:5px;
+    float: left;
+}
+.avatar-15{
+    height: 15px;
+    width: 15px;
+    border-radius:5px;
+    float: left;
+    margin:5px;
+}
+
 .nav-margin{
     width: 100%;
     height: 55px;
