--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,19 +15,23 @@ nav .dropdown-menu i {
   width: 20px;
 }
 
+.avatar-200 {
+  height: 200px;
+  width: 200px;
+  border-radius: 10px;
+}
+
 .avatar-24 {
   height: 24px;
   width: 24px;
   border: 1px solid #fff;
   border-radius: 5px;
-  float: left;
 }
 
 .avatar-15 {
   height: 15px;
   width: 15px;
   border-radius: 5px;
-  float: left;
   margin: 5px;
 }
 
